2002-12-14  Jonathan Pryor <jonpryor@vt.edu>

	* ConfigurationSettings.cs: Allow configuration sections to be removed.

2002-11-04  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* ConfigurationSettings.cs: use AppDomainSetup to get the configuration
	file name for the AppDomain.

2002-10-31  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* ConfigHelper.cs: NameValueCollection.Add is now fixed.

2002-10-14  Martin Baulig  <martin@gnome.org>

	* ConfigurationSettings.cs (DefaultConfig.GetAppConfigPath):
	Append ".config" to the filename, not ".exe.config" since the
	filename already has a ".exe" suffix.

2002-10-14  Martin Baulig  <martin@gnome.org>

	* ConfigurationSettings.cs (DefaultConfig.GetAppConfigPath): Use
	Assembly.Location, not Assembly.FullName to get its filename.

2002-10-10  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* ConfigHelper.cs: workaround for a bug in NameValueCollection.
	* ConfigurationSettings.cs: load sections when the parent holds a
	handler for it. Now overriding appSettings values in the app config
	file works (first <remove..> and then <add...).

2002-10-09  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* ConfigHelper.cs:
	* NameValueFileSectionHandler.cs: check that Attributes is not null.

2002-10-09  Miguel de Icaza  <miguel@ximian.com>

	* NameValueFileSectionHandler.cs: For now if a section is not
	present, return null.  Do not know what the real fix is.  Gonzalo
	will have to look at this, but the debugger was crashing as
	appSettings in the machine.config does not exist, but GetConfig
	returns a non-null value when looking it up when you do a
	GetDocumentForSection ("appSettings").

2002-10-09  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* ConfigurationSettings.cs: use get_machine_config_path internal call.

2002-10-08  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* ConfigXmlDocument.cs: move the reader for the section to the first
	element.
	
	* ConfigurationSettings.cs: fixed hierarchical search for a handler. 
